fix (design library): prevent stretching of shorter preview images

--- a/src/components/design-library-list/editor.scss
+++ b/src/components/design-library-list/editor.scss
@@ -51,7 +51,7 @@
 		pointer-events: none; // Prevent dragging the image.
 		width: 100%;
 		height: auto;
-		min-height: 100px;
+		min-height: 50px;
 		background: #f1f1f1;
 	}
 	footer {
